crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_palette_filtered.snap
---
source: crates/ganja-tui/src/app_tests.rs
assertion_line: 4912
expression: screen(&terminal)
---
> show me every color you have                                                  
        ┌ commands ────────────────────────────────────────────────────┐        
● One ed│s                                                             │        
● Edit(f│session                                                       │        
  ⎿ them│> /compact       Compact session                              │        
    @@ -│  /sessions      Switch session                         ctrl+s│        
    -let│system                                                        │        
    +let│  /skills        Skills                                       │        
    cont│agent                                                         │        
● Bash(c│  /agents        Switch agent                                 │        
  ⎿ [err│system                                                        │        
        │  /copy          Copy session transcript                      │        
        │session                                                       │        
        │  /deadline      Set a time budget                            │        
        │                                                              │        
        │[type] filter   [up/down] move   [Enter] run   [Esc] close    │        
        └──────────────────────────────────────────────────────────────┘        
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
