crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_palette_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
you                                                                             
show me ┌ commands ────────────────────────────────────────────────────┐        
        │search commands                                               │        
ganja   │suggested                                                     │        
One edit│> /sessions      Switch session                         ctrl+s│        
[done] e│  /models        Switch model                                 │        
@@ -1,2 │session                                                       │        
-let the│  /sessions      Switch session                         ctrl+s│        
+let the│  /new           New session                                  │        
context │  /compact       Compact session                              │        
[error] │  /editor        Open editor                                  │        
refused:│agent                                                         │        
        │  /models        Switch model                                 │        
        │  /effort        Switch model effort                          │        
        │                                                              │        
        │[type] filter   [up/down] move   [Enter] run   [Esc] close    │        
        └──────────────────────────────────────────────────────────────┘        
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready                  Enter send · Alt+Enter newline · Esc cancel · Ctrl-C quit
