crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_permission_dialog_with_a_call_too_long_to_fit.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
  ┌ permission ──────────────────────────────────────────────────────────────┐  
  │tool: shell                                                               │  
  │cargo test --workspace --all-features --no-fail-fast -- --nocapture --skip│  
  │ live --skip golden --skip pty --skip slow --skip flaky --skip live --skip│  
  │ golden --skip pty --skip slow --skip flaky --skip live --skip golden --sk│  
  │ip pty --skip slow --skip flaky --skip live --skip golden --skip pty --ski│  
  │p slow --skip flaky --skip live --skip golden --skip pty --skip slow --ski│  
  │p flaky --skip live --skip golden --skip pty --skip slow --skip flaky --sk│  
  │ip live --skip golden --skip pty --skip slow --skip flaky --skip live --sk│  
  │ip golden --skip pty --skip slow --skip flaky --skip live --skip golden --│  
  │skip pty --skip slow --skip flaky --skip live --skip golden --skip pty --s│  
  │kip slow --skip flaky --skip live --skip golden --skip pty --skip slow --s│  
  │... +17 lines not shown                                                   │  
  │                                                                          │  
  │[y] allow once   [a] always allow   [n]/[Esc] reject                      │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready                  Enter send · Alt+Enter newline · Esc cancel · Ctrl-C quit
