crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_plugin_action_menu.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ┌ plugin ──────────────────────────────────────────────────────────────────┐  
  │formatter                                                                 │  
  │> Disable                                                                 │  
  │  Remove                                                                  │  
  │                                                                          │  
  │[j/k] [up/down] move   [Enter] run   [Esc] close                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
