crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_queued_messages_strip.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
> the turn to steer                                                             
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
│ run the tests too                                                             
│ and then commit                                                               
press up to edit queued messages                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
⠋ streaming · 2 queued
