crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_read_row.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
● Read(/repo/crates/ganja-tui/src/component/chat.rs · lines 1158-1217)          
  ⎿ Read 60 lines                                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
