crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_receipt_notice_lines.snap
---
source: crates/ganja-tui/src/app_tests.rs
expression: "lines.join(\"\\n\")"
---
peer message 0198f2c4 to "backend@solo": delivered
peer message 0198f2c4 to "backend@solo": denied
peer message 0198f2c4 to "backend@solo": expired
