crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_reverted_transcript.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
you                                                                             
the question that stands                                                        
                                                                                
ganja                                                                           
the answer that stands                                                          
                                                                                
2 messages reverted — /redo to restore                                          
↳ crates/ganja-tui/src/app.rs                                                   
↳ README.md                                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
